--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-03-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/argz.m4 (gl_FUNC_ARGZ): Sync with gnulib:  If we
+	define `error_t', also define `__error_t_defined', so argp.h
+	will not typedef the former.
+
 2006-03-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/ltdl.m4 (LT_SYS_DLOPEN_DEPLIBS) [ freebsd ]
