--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [ linux ]:
+	Avoid warning when "parsing" `/etc/ld.so.conf' and empty
+	`/etc/ld.so.conf.d'.
+	Reported by Orion Poplawski <orion@cora.nwra.com>.
+
 2006-03-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* bootstrap: Actually use the correct version of the last patch.
