--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/fail.at: Use "test -x" if available, for testing of
+	executables; code modified from Autoconf's AS_EXECUTABLE_P.
+	Reported by Albert Chin <china@thewrittenword.com>.
+
 2006-04-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/config/ltmain.m4sh (func_write_libtool_object):
