--- a/THANKS
+++ b/THANKS
@@ -74,6 +74,7 @@
   Bruno Haible			haible@ilog.fr
   Carl D. Roth			roth@cse.ucsc.edu
   Chris P. Ross			cross@eng.us.uu.net
+  Christian Biesinger		cbiesinger@web.de
   Dalibor Topic			robilad@kaffe.org
   Daniel Reed			n@ml.org
   DJ Delorie			dj@delorie.com
@@ -90,6 +91,7 @@
   Jeremy C. Reed		reed@reedmedia.net
   Joel N. Weber II		devnull@gnu.org
   Joerg Sonnenberger		joerg@netbsd.org
+  John Bowler			jbowler@acm.org
   Joseph Beckenbach III		jrb3@best.com
   Kenneth Albanowski		kjahds@kjahds.com
   Kevin Ryde			user42@zip.com.au
