--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-05-14  John Bowler  <jbowler@acm.org>
+
+	* ltmain.in (link mode): For version_type `none', we still need
+	to set `current', `age', and `revision', so that our checks
+	don't barf.  The values won't be used later.  Apparently
+	reported by several people, several times, for BeOS.
+	* NEWS, THANKS: Update.
+
 2006-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER) [ linux ]:
