--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ New in 1.5.23a: 2006-??-??; CVS version 1.5.23a, Libtool team:
 * Let libltdl know that FreeBSD and DragonFly dlopen causes dependent
   modules to be loaded.  This fixes excessive load times for modules
   with large library dependency graphs.
+* Fix error with -version-info on systems with version_type=none, such
+  as BeOS.
 * Bug Fixes.
 
 New in 1.5.22: 2005-12-18; CVS version 1.5.21a, Libtool team:
