--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-14  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
+	[ aix ]: $hardcode_direct is set twice.
+
 2005-05-14  John Bowler  <jbowler@acm.org>
 
 	* libltdl/config/ltmain.m4sh (func_mode_link): For version_type
