--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,7 @@ New in 1.9h: 2005-??-??; CVS version 2.1a, Libtool team:
 * Initial support for RDOS.
 * Fix error with -version-info on systems with version_type=none, such
   as BeOS.
+* Initial support for the Sun compiler suite on GNU/Linux.
 * Bug fixes.
 
 New in 1.9f: 2004-10-23; CVS version 1.9e, Libtool team:
