--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-24  Albert Chin  <china@thewrittenword.com>
+
+	* libltdl/m4/libtool.m4 (_LT_LANG_CXX_CONFIG)
+	[ aix4*, aix5*, hpux10*, hpux11* ]: Set hardcode_direct_absolute
+	for CXX tag too!
+
 2006-05-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/config/ltmain.m4sh (func_mode_link, shell wrapper):
