--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-01  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_COMPILER_PIC) [ cygwin ]:
+	define DLL_EXPORT for PIC objects on cygwin.
+
 2006-05-19  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtool.m4 (LT_AC_PROG_SED): AC_SUBST([SED]) for
