--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-01  Tim Rice  <tim@multitalents.net>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [ sco3.2v5.0.[024]* ]:
+	Add missing case entry for these systems.
+
 2006-06-01  Charles Wilson  <libtool@cwilson.fastmail.fm>
 
 	* libtool.m4 (AC_LIBTOOL_PROG_COMPILER_PIC) [ cygwin ]:
