--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2006-06-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in: Convert *each* occurrence of `compile_command',
+	`finalize_command', `relink_command', and `link_command',
+	that can conceivably be longer than 4000 bytes, to newline-
+	separated arguments before feeding to sed, to cater for sed
+	implementations with limited line lengths.  Convert back
+	afterwards.
+	* tests/link.test: Accommodate for trailing white space
+	resulting from above change.
+	This addresses an issue reported by Albert Chin on 2001-05-27:
+	http://lists.gnu.org/archive/html/libtool/2001-05/msg00159.html
+
 2006-06-01  Tim Rice  <tim@multitalents.net>
 
 	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [ sco3.2v5.0.[024]* ]:
