--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-08-01  Albert Chin <china@thewrittenword.com>
+
+	* libltdl/m4/libtool.m4 (_LT_SYS_HIDDEN_LIBDEPS) [ solaris ]:
+	Don't set $postdeps to "-lCstd -lCrun" if
+	"-library=stlport4" set in CXXFLAGS as stlport4 C++
+	library incompatible with Cstd C++ library. Use
+	'-library=Cstd -library=Crun' instead of '-lCstd -lCrun'.
+
 2006-07-28  Eric Blake  <ebb9@byu.net>
 
 	* libltdl/m4/libtool.m4 (_LT_CHECK_MAGIC_METHOD, LT_OUTPUT):
