--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-03  Ralf Menzel  <menzel@ls6.cs.uni-dortmund.de>
+
+	* libtool.m4 (AC_LIBTOOL_POSTDEP_PREDEP): Previous patch
+	applies to linux too, with Sun compiler.
+
 2006-08-01  Albert Chin <china@thewrittenword.com>
 
 	* libtool.m4 (AC_LIBTOOL_POSTDEP_PREDEP) [ solaris ]:
