--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/config/ltmain.m4sh (func_mode_execute): Also search
+	the directory above `$objdir' for the argument of "-dlopen", as
+	mentioned in the error message.
+
 2006-08-03  Ralf Menzel  <menzel@ls6.cs.uni-dortmund.de>
 
 	* libltdl/m4/libtool.m4 (_LT_SYS_HIDDEN_LIBDEPS): Fix issues
