--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (execute mode): Also search the directory above `$objdir'
+	for the argument of "-dlopen", as mentioned in the error message.
+
 2006-08-03  Ralf Menzel  <menzel@ls6.cs.uni-dortmund.de>
 
 	* libtool.m4 (AC_LIBTOOL_POSTDEP_PREDEP): Previous patch
