--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-22  Eric Blake  <ebb9@byu.net>
+
+	* libltdl/m4/libtool.m4: Avoid space-tab.
+
 2006-08-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/config/ltmain.m4sh (func_mode_execute): Also search
